2022-07-09

    * random/dune.json:change biome from 'desert' to 'sahara' (fixes OOS)
    * maps/random/fert_triggers.js:fix 'GetCiv' error message

2022-07-07

    * release v0.26.1

2022-07-06

    * maps/random/homers_delight.js:don't have fish on land
    * mod.json:remove trailing '-git' from mod name

2022-07-04

    * release v0.26.0

2022-07-03

    * Add random/homers_delight.js

2022-06-18

    * bump version to 0.25999.0; change dep req to a26
    * replace "Chicken" with "StartingAnimal" in random maps

2022-06-09

    * remove random/African Plains TG

2022-04-10

    * release v0.25.15

2022-03-27

    + random/gaia:add new map by @MirceaKitsune

2022-03-24

    * random/open_grave.js:remove incomplete map
    * release v0.25.14

2022-03-22

    * random/stans_sorrow.js:add new map

2022-03-12

    * corinthian_isthmus_ii.js:fix forest distance to player base
    + random/carpathian:add new map
    * release v0.25.13

2022-03-12

    * release v0.25.12

2022-03-11

  * remove skirmishes/Cliffs of Carnage 3v4 and 4v4

2022-03-09

  * add random/Cliffs of Carnage

2022-03-08

  * remove scenarios/Constantinople (incomplete/abandoned)
  * remove scenarios/invasion_of_britain (incomplete/abandoned)

2022-03-07

  * Fix errors (missing entities) on scenarios/Asian Campaign *
  * Replace scenarios/Asian Campaign with slightly newer version by
  original author

2022-03-05

  * remove scenarios/Southeast Asia (incomplete/abandoned)

2022-03-04

  * remove scenarios/mesina (incomplete/abandoned)

2022-03-03

  * Fix errors (missing entities) on skirmishes/Arabia and
  scenarios/Paradise Valley

2022-02-22

  * removed Halicarnassus; appears to be an unfinished/abandoned map
  * Battle of Vikingland:fix warnings about missing longboat
  * Mappa Europa III:fix loading errors
  * removed 0 A.D. Community Eyecandy Map:unfinished/abandoned map

2022-02-19

  * replace Povorotnaya map preview (fixes #30)
  * v0.25.11 released

2022-02-14

  * v0.25.10 released
