@@ -1,3 +1,7 @@
+2022-07-10
+
+    * maps/random/plague_swamp.js:remove triggers, remove insects
+
 2022-07-09
 
     * random/dune.json:change biome from 'desert' to 'sahara' (fixes OOS)
